testsuite/poke.pkl/forget-diag-1.pk
/* { dg-do compile } */

forget "foo", 2#B; /* { dg-error "expected.*integer" } */
